// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should render EventDetail 1`] = `
<Component
  event={
    EventModel {
      "_address": "",
      "_availableLanguages": Object {
        "ar": "1236",
        "en": "1234",
      },
      "_content": "",
      "_dateModel": DateModel {
        "_allDay": undefined,
        "_endDate": undefined,
        "_startDate": undefined,
      },
      "_excerpt": "",
      "_id": 1235,
      "_thumbnail": "",
      "_title": "erstes Event",
      "_town": "",
    }
  }
  language="en"
  location="augsburg"
/>
`;

exports[`EventsPage should render EventList 1`] = `
<Component
  events={
    Array [
      EventModel {
        "_address": "",
        "_availableLanguages": Object {
          "ar": "1236",
          "de": "1235",
        },
        "_content": "",
        "_dateModel": DateModel {
          "_allDay": undefined,
          "_endDate": undefined,
          "_startDate": undefined,
        },
        "_excerpt": "",
        "_id": 1234,
        "_thumbnail": "",
        "_title": "first Event",
        "_town": "",
      },
      EventModel {
        "_address": "",
        "_availableLanguages": Object {
          "ar": "1236",
          "en": "1234",
        },
        "_content": "",
        "_dateModel": DateModel {
          "_allDay": undefined,
          "_endDate": undefined,
          "_startDate": undefined,
        },
        "_excerpt": "",
        "_id": 1235,
        "_thumbnail": "",
        "_title": "erstes Event",
        "_town": "",
      },
      EventModel {
        "_address": "",
        "_availableLanguages": Array [],
        "_content": "",
        "_dateModel": DateModel {
          "_allDay": undefined,
          "_endDate": undefined,
          "_startDate": undefined,
        },
        "_excerpt": "",
        "_id": 2,
        "_thumbnail": "",
        "_title": "second Event",
        "_town": "",
      },
    ]
  }
  language="en"
  url="/augsburg/en/events"
/>
`;

exports[`EventsPage should render Spinner 1`] = `
<Spinner
  fadeIn="full"
  name="line-scale-party"
  noFadeIn={false}
  overrideSpinnerClassName=""
/>
`;
